--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,9 @@
   "license": "MIT",
   "description": "Entity Attribute model forms integration",
   "require": {
-    "php": "^7.1.3",
-    "symfony/framework-bundle": "^2.7.22|~3.0|~4.0",
-    "symfony/form": "^4.2",
-    "vaderlab/eav-core-bundle": "dev-master"
+    "php": "^7.1.3|^7.2",
+    "symfony/framework-bundle": "^2.7.22|~3.0|~4.0|~4.1|~4.2",
+    "symfony/form": "^4.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8.36|^5.7|^6.4",
